<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_carros"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/lista_carros" />
        <item
            android:id="@+id/nav_usuarios"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/lista_usuarios" />
        <item
            android:id="@+id/nav_relatorio"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/lista_relatorio" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_settings_48pt"
            android:title="@string/opcoes" />
    </group>
</menu>
