<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_carro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lucas.controlcar.carro.CarroCadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/carro_cad_etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/nome_carro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="181dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/carro_cad_etModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/modelo_carro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="181dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/carro_cad_etMontadora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/montadora_carro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/carro_cad_etPlaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/placa_carro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/carro_cad_etAno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/ano_carro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="181dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/carro_cad__etCor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/cor_carro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_gravity="bottom"
        android:id="@+id/carro_cad_btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="salvarCarro"
        android:text="@string/button_salvar" />
    </LinearLayout>
</LinearLayout>
