<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_carro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lucas.controlcar.carro.CarroActivity">

    <ImageView
        android:id="@+id/activity_carro_imgCarro"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_menu_camera" />
    <Button
        android:id="@+id/activity_carro_btnFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="+ Foto"
        android:onClick="capturarFoto"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_carro_etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/nome_carro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="181dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_carro_etModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/modelo_carro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="181dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_carro_etMontadora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/montadora_carro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_carro_etPlaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/placa_carro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_carro_etAno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/ano_carro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="181dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_carro_etCor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/cor_carro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>
