<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:elevation="10dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/espaco_nome"
                        android:text="@string/data_relatorio"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fragment_relatorio_list_item_tvData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_relatorio" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/espaco_nome"
                        android:text="@string/kmmax_relatorio"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fragment_relatorio_list_item_tvKmmax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kmmax_relatorio" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/espaco_nome"
                        android:text="@string/mediakm_relatorio"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fragment_relatorio_list_item_tvMediakm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mediakm_relatorio" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
